# Scope

./: .gitignore  README.md  pyproject.toml
plots/: grid_freq.py
scope/: __init__.py  scope.py  types.py
scripts/: grid_freq.py  panel_ocv.py
