[project]
name = "scope"
version = "0.0.1"
requires-python = ">=3.14"

[dependency-groups]
dev = [
    "accurate-timed-loop>=1.1.0",
    "ipython>=9.10.0",
    "numpy>=2.4.2",
    "pint>=0.25.2",
    "psutil>=7.2.2",
    "pyvisa>=1.16.1",
    "pyvisa-py>=0.8.1",
    "termcolor>=3.3.0",
    "tqdm>=4.67.3",
    "zeroconf>=0.148.0",
]
plot = [
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]
pygobject = [
    "pygobject>=3.54.5",
]
